# market-model-profitability

./: .gitignore  EconomicExperimentArtificialData.ipynb  EconomicExperimentRealData.ipynb  README.html  README.md  Results_Economics.xlsx  Results_ExperimentA.xlsx  Results_example.xlsx  Results_example_pre.xlsx  network.csv  pyproject.toml  requirements.txt
.Rproj.user/34169D33/pcs/: files-pane.pper  (+1 more)
.Rproj.user/pcs/: files-pane.pper  windowlayoutstate.pper
.ipynb_checkpoints/: EconomicExperimentRealData-checkpoint.ipynb
experiments/: EconomicExperimentArtificialData.ipynb  EconomicExperimentRealData.ipynb
experiments/.ipynb_checkpoints/: EconomicExperimentArtificialData-checkpoint.ipynb  EconomicExperimentRealData-checkpoint.ipynb
figures/: .Rhistory  Figure_3_FavoriteLongshot.Rmd
results/: 1artificial_table_ExperimentHA_Fixed_bm1.xlsx  1artificial_table_ExperimentHA_Fixed_bm2.xlsx  1artificial_table_ExperimentHA_Kelly_bm1.xlsx  1artificial_table_ExperimentHA_Kelly_bm2.xlsx  2artificial_table_ExperimentHA_Fixed_bm1.xlsx  2artificial_table_ExperimentHA_Fixed_bm2.xlsx  2artificial_table_ExperimentHA_Kelly_bm1.xlsx  2artificial_table_ExperimentHA_Kelly_bm2.xlsx  artificial_table_ExperimentDraw_Fixed_bm1.xlsx  artificial_table_ExperimentDraw_Fixed_bm2.xlsx  artificial_table_ExperimentDraw_Kelly_bm1.xlsx  artificial_table_ExperimentDraw_Kelly_bm2.xlsx  artificial_table_ExperimentFL_Fixed_bm1.xlsx  artificial_table_ExperimentFL_Fixed_bm2.xlsx  artificial_table_ExperimentFL_Kelly_bm1.xlsx  artificial_table_ExperimentFL_Kelly_bm2.xlsx  artificial_table_ExperimentHA_Fixed_bm1.xlsx  artificial_table_ExperimentHA_Fixed_bm2.xlsx  artificial_table_ExperimentHA_Kelly_bm1.xlsx  artificial_table_ExperimentHA_Kelly_bm2.xlsx  real_raw_fixed_averageodds.xlsx  real_raw_fixed_maximumodds.xlsx  real_table_fixed_averageodds.xlsx  real_table_fixed_maximumodds.xlsx  real_table_kelly_averageodds.xlsx  real_table_kelly_maximumodds.xlsx  real_table_threshold_02_averageodds.xlsx  real_table_threshold_03_maximumodds.xlsx
(+46 files in other folders)
