[project]
name = "economic-paper"
version = "1.0.0"
description = "Economic experiment analysis for rating systems and betting strategies"
authors = [
    {name = "Research Team"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.7,<3.8"
keywords = ["economics", "betting", "rating-systems", "forecasting"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.7",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    # Core scientific computing (Python 3.7 compatible versions)
    "pandas>=1.1.0,<1.4.0",
    "numpy>=1.16.0,<1.22.0",
    "tqdm>=4.50.0,<5.0.0",
    # Jupyter ecosystem
    "jupyter>=1.0.0",
    "ipykernel>=5.3.0",
    "ipywidgets>=7.5.0,<8.0.0",
    # Excel export support
    "openpyxl>=3.0.0,<4.0.0",
    "xlsxwriter>=1.3.0,<4.0.0",
    # DFG Rating package from GitHub repository
    "dfg-rating @ git+https://github.com/spoho-datascience/dfg-rating.git@feature/replicability-seeding",
    "pip>=24.0",
    "scikit-learn>=1.0.2",
    "plotly>=5.18.0",
    "dash>=2.15.0",
    "jupyter-dash>=0.4.2",
    "dash-cytoscape>=0.3.0",
    "dash-bootstrap-components>=1.5.0",
    "dash-daq>=0.6.0",
    "psycopg2-binary>=2.9.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.10.0",
    "black>=21.0.0",
    "flake8>=3.8.0",
    "mypy>=0.812",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
dev-dependencies = [
    "pytest>=6.0.0",
    "pytest-cov>=2.10.0",
    "black>=21.0.0",
    "flake8>=3.8.0",
]

[tool.black]
target-version = ['py37']
line-length = 88
include = '\.pyi?$'

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
